Increased mem_limits to the total 7GB Fixing navbar overflow using bootstrap-responsive.css Changed frontpage content XHTML

--- a/infrastructure/docker/linkeddatahub/files/bootstrap.css
+++ b/infrastructure/docker/linkeddatahub/files/bootstrap.css
@@ -1,4 +1,4 @@
-body { font-family: "Open Sans", Arial, sans-serif; color: black; font-size: 16px; }
+body { font-family: "Open Sans", Arial, sans-serif; color: black; font-size: 16px; padding-top: 0; }
 .brand img { height: 1em; }
 .navbar .nav > li > a { color: black; letter-spacing: 2px; font-size: 0.8rem; font-weight: 400; text-shadow: none; border-top: 2px solid white; }
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus { background-color: inherit; color: inherit; font-weight: bold; border-top: 2px solid #50742f; }
@@ -6,10 +6,12 @@ body { font-family: "Open Sans", Arial, sans-serif; color: black; font-size: 16p
 .navbar-inner { background-color: white; }
 .action-bar { background-color: #f5f5f5; }
 .progress-striped .bar { background-color: #50742F; }
-a, a:hover, a:focus, .navbar .brand, .nav-list > li > a  { color: black; }
+a, a:hover, a:focus, .navbar .brand, .nav-list > li > a { color: black; }
+.xhtml-content a { text-decoration: underline; }
 .well { background-color: #f5f5f5; }
 div.span7 h2, .navbar .brand { font-weight: 700; }
 div.span7 h2 a:after { content: " \279E"; }
+li.map-mode { display: none; } /* hide the "Map" tabs with Google Maps" for now */
 #map { width: 100%; height: 400px; }
 .footer { background-color: #50742F; color: white; padding-top: 5rem; font-size: unset; }
 .footer .nav-header { font-family: "Open Sans", Arial, sans-serif; font-size: 1.2rem; color: white; line-height: 1.8; text-transform: unset; }
